--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "antd": "^5.10.2",
     "axios": "^1.6.0",
     "http-proxy-middleware": "^2.0.6",
+    "markdown-it": "^13.0.2",
+    "marked": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.0",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "rehype-highlight": "^7.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
