--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.10.2",
     "axios": "^1.6.0",
     "http-proxy-middleware": "^2.0.6",
+    "immer": "^10.0.3",
     "markdown-it": "^13.0.2",
     "marked": "^10.0.0",
     "react": "^18.2.0",
@@ -23,7 +24,8 @@
     "react-scripts": "5.0.1",
     "rehype-highlight": "^7.0.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
