--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react-dom": "^18.2.14",
     "antd": "^5.10.2",
     "axios": "^1.6.0",
+    "customize-cra": "^1.0.0",
     "http-proxy-middleware": "^2.0.6",
     "immer": "^10.0.3",
     "markdown-it": "^13.0.2",
     "marked": "^10.0.0",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.0",
     "react-markdown-editor-lite": "^1.3.4",
@@ -28,9 +30,9 @@
     "zustand": "^4.4.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "cross-env PORT=12333 react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
